# teach_motions

./: CMakeLists.txt  README.md  package.xml
cfg/: dual_arm_husky.yaml  left_arm_jog_settings.yaml  outdated_sim_settings.yaml  sim_left_jog_settings.yaml  sim_right_jog_settings.yaml  test.yaml  vaultbot.yaml  vaultbot_left_jog_settings.yaml  vaultbot_right_jog_settings.yaml
data/: barrel_lid1_arm0.csv  barrel_lid1_arm0_processed.csv  cabinet_door1_arm0.csv  cabinet_door1_arm0_processed.csv  handle7_arm0.csv  handle7_arm0_processed.csv  handle7_arm1.csv  handle7_arm1_processed.csv  legos1_arm0.csv  legos1_arm0_processed.csv  test_arm0.csv  test_arm0_processed.csv  test_arm1.csv  test_arm1_processed.csv  two_hand_valve1_arm0.csv  two_hand_valve1_arm0_processed.csv  two_hand_valve1_arm1.csv  two_hand_valve1_processed.csv  two_hand_valve2_arm0.csv  two_hand_valve2_arm0_processed.csv
data/net_motion/: test_arm0_net_motion.csv
data/stiffness/: test_arm0_stiffness.csv
data/supplementary/: barrel_lid1_arm0_supplementary.csv  two_hand_valve2_arm0_supplementary.csv
include/teach_motions/: compliant_replay.h
launch/: postprocess.launch  prepare_to_send_cmds.launch  sim_compliant_replay.launch  sim_prepare_to_send.launch  teach_motions.launch  vaultbot_compliant_replay.launch  vaultbot_postprocess.launch  vaultbot_prepare_to_send.launch  vaultbot_teach_motions.launch
scripts/: process_pose_data  read_and_send  replay  teach_motions
src/teach_motions/: compliant_replay.cpp
teach_motions/: CMakeLists.txt  README.md  package.xml
teach_motions/action/: CompliantReplay.action  ReplayMotion.action
teach_motions/cfg/: cabinet_door1.yaml  high_voltage_cw1.yaml  sim_left_jog_settings.yaml  sim_right_jog_settings.yaml  test.yaml  twist_doorknob_ccw.yaml  ur3Test1.yaml  ur3_jog_config.yaml  vaultbot_left_jog_settings.yaml  vaultbot_right_jog_settings.yaml
teach_motions/data/: cabinet_door1_arm0.csv  cabinet_door1_arm0_processed.csv  hv_switch_cw1_arm0.csv  hv_switch_cw1_arm0_processed.csv  log.csv  push_door_arm0.csv  push_door_arm0_processed.csv  test_arm0.csv  test_arm0_processed.csv  test_arm1.csv  test_arm1_processed.csv  twist_doorknob_ccw_arm0.csv  twist_doorknob_ccw_arm0_processed.csv  ur3Test1_arm0.csv  ur3Test1_arm0_processed.csv
teach_motions/data/net_motion/: cabinet_door1_arm0_net_motion.csv  high_voltage_cw1_arm0_net_motion.csv  hv_switch_cw1_arm0_net_motion.csv  push_door_arm0_net_motion.csv  test_arm0_net_motion.csv  test_arm1_net_motion.csv  twist_doorknob_ccw_arm0_net_motion.csv  ur3Test1_arm0_net_motion.csv
teach_motions/data/stiffness/: hv_switch_cw1.csv
teach_motions/include/teach_motions/: compliant_replay.h
teach_motions/launch/: sim_postprocess.launch  sim_teach_motions.launch  ur3_prepare_to_send.launch  vaultbot_compliant_replay.launch  vaultbot_postprocess.launch  vaultbot_prepare_to_send.launch  vaultbot_set_parameters.launch  vaultbot_teach_motions.launch
teach_motions/scripts/: process_pose_data  spacenav_to_twist.py  teach_motions
teach_motions/src/teach_motions/: compliant_replay.cpp  compliant_replay_server.cpp  get_ros_params.cpp
teach_motions/srv/: RequestMotion.srv
teach_motions_gui/: CMakeLists.txt  package.xml  plugin_description.xml
teach_motions_gui/src/: reachability_panel.cpp  reachability_panel.h  teach_motions_panel.cpp  teach_motions_panel.h
teach_motions_reachability/: CMakeLists.txt  package.xml  plugin_description.xml
teach_motions_reachability/src/: reachability_panel.cpp  reachability_panel.h  teleop_panel.cpp  teleop_panel.h
