<?xml version="1.0"?>
<package format="2">
  <name>teach_motions</name>
  <version>0.0.0</version>
  <description>The teach_motions package</description>

  <maintainer email="andyz@utexas.edu">nrgadmin</maintainer>

  <license>specified in-file</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>jog_arm</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
